--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -2529,4 +2529,7 @@
   <data name="LiteNetLib" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\LiteNetLib.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="upd" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\upd.bat;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;windows-1251</value>
+  </data>
 </root>
