Внесено новое правило, благодаря которому теперь у первого игрока нет 100% возможности победить при определённой стратегии, изменена логика бота, составлена схема окон

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -2,7 +2,8 @@
 Вынести код из MP и SP в отдельный класс (может быть создать родительскую форму?)
 Переписать всё на WPF
 ДОБАВИТЬ ЗВУКИ
-добавить правила к игре, чтоб убрать гарантированный способ победить в самом начале игры
++ добавить правила к игре, чтоб убрать гарантированный способ победить в самом начале игры - нельзя первым ходом посылать в себя
++ переписать логику что бот должен ходить туда где наоборот свободнее
 рандомный первый игрок
 авторизация TTTMAuth
 Регулирование сложности бота (от того, который делает всё чтоб игрок победил, до того, который максимально пытается победить)
