Перенос проекта на WPF

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,6 +1,6 @@
 ﻿BreakAnyConnection - останавливать таски
 Вынести код из MP и SP в отдельный класс (может быть создать родительскую форму?)
-Переписать всё на WPF
+++ Переписать всё на WPF - в процессе
 ДОБАВИТЬ ЗВУКИ
 + добавить правила к игре, чтоб убрать гарантированный способ победить в самом начале игры - нельзя первым ходом посылать в себя
 + переписать логику что бот должен ходить туда где наоборот свободнее
@@ -9,3 +9,14 @@
 Регулирование сложности бота (от того, который делает всё чтоб игрок победил, до того, который максимально пытается победить)
 Переделать интерфейс, дисигн от ШШ хд
 Переписать на OpenGL с TAO Framework
++ Settings.Current чтоб не передавать (почти singleton xD)
+вынести ExtensionsClass
+Timer => Task
+
+
+Переделывание в WPF:
+	Главное меню +
+	Одиночная игра и её создание +/-, доделаю при внедрениилвла бота и opengl
+	Сетевая игра -
+	Настройки -
+	Статистика - потом
