Класс методов расширения вынесен в отдельный файл

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -8,9 +8,8 @@
 авторизация TTTMAuth
 Регулирование сложности бота (от того, который делает всё чтоб игрок победил, до того, который максимально пытается победить)
 Переделать интерфейс, дисигн от ШШ хд
-Переписать на OpenGL с TAO Framework
 + Settings.Current чтоб не передавать (почти singleton xD)
-вынести ExtensionsClass
++ вынести ExtensionsClass
 Timer => Task
 
 
