Сделал настройки (переделал в wpf)

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -15,5 +15,8 @@ Timer => Task
 	Главное меню +
 	Одиночная игра и её создание +/-, доделаю при внедрениилвла бота и opengl
 	Сетевая игра -
-	Настройки -
+	Настройки в процессе
 	Статистика - потом
+
+Идея для десигна:
+	- Менять выражение лица бота в зависимости от Max(Scores)
