Сделал выбор уровня бота ползунком, всё реализованно через рекурсивного бота

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -6,16 +6,16 @@
 + переписать логику что бот должен ходить туда где наоборот свободнее
 рандомный первый игрок
 авторизация TTTMAuth
-Регулирование сложности бота (от того, который делает всё чтоб игрок победил, до того, который максимально пытается победить)
++ Регулирование сложности бота (от того, который делает всё чтоб игрок победил, до того, который максимально пытается победить)
 Переделать интерфейс, дисигн от ШШ хд
 Timer => Task
 
 
 Переделывание в WPF:
 	Главное меню +
-	Одиночная игра и её создание +/-, доделаю при внедрениилвла бота и opengl
+	Одиночная игра +
 	Сетевая игра -
-	Настройки в процессе
+	Настройки +
 	Статистика - потом
 
 Идея для десигна:
