Доделал форму начала мультиплеерной игры

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -14,5 +14,16 @@ Timer => Task
 	Настройки +
 	Статистика - потом
 
+MPStart :
+1) Графический выбор создания сервера, списка серверов или настроек (Выход)
+2) 3 Grid'а, см выше (Назад, Выход)
+3) Подключение (Отключить, Назад, Выход, Начать)
+
 Идея для десигна:
 	- Менять выражение лица бота в зависимости от Max(Scores)
+
+От ШШ:
+	Окно About
+	Старт игры в синглплеере
+	Бот с эмоциями меняющимися в зависимости от Scores.Max()
+	Выбор создать сервер или подключиться в мультиплеере
