--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -142,4 +142,16 @@
   <data name="StartSingleGameBG" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\StartSingleGameBG.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="MPStartCreateServer355" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MPStartCreateServer355.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="MPStartForeground" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MPStartForeground.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="MPStartMenuBG" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MPStartMenuBG.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="MPStartServerList50_100_25_65" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MPStartServerList50-100-25-65.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
