--- a/ToDo.txt
+++ b/ToDo.txt
@@ -5,6 +5,7 @@
 авторизация TTTMAuth
 Переделать интерфейс, дисигн от ШШ хд
 Timer => Task
++ Добавить элемент управления вверху тип который
 
 
 Переделывание в WPF:
@@ -14,16 +15,5 @@ Timer => Task
 	Настройки +
 	Статистика - потом
 
-MPStart :
-1) Графический выбор создания сервера, списка серверов или настроек (Выход)
-2) 3 Grid'а, см выше (Назад, Выход)
-3) Подключение (Отключить, Назад, Выход, Начать)
-
 Идея для десигна:
 	- Менять выражение лица бота в зависимости от Max(Scores)
-
-От ШШ:
-	Окно About
-	Старт игры в синглплеере
-	Бот с эмоциями меняющимися в зависимости от Scores.Max()
-	Выбор создать сервер или подключиться в мультиплеере
