Починил сохранение в файл

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -17,3 +17,6 @@ Timer => Task
 
 Идея для десигна:
 	- Менять выражение лица бота в зависимости от Max(Scores)
+
++ Починить сохранение/загрузку
+- Применить общий дизайн для всех элементов управления (на 7 винде слетает стиль)
